objects/Associated_Customer__c.object
<CustomObject>
    <description>This object tracks the additional Customer and Contact for one call plan/call report</description>
    <fields>
        <fullName>Associated_Customer_Type__c</fullName>
        <label>Associated Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Interested</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Borrower_Type__c</fullName>
        <label>Borrower Type</label>
        <picklist>
            <picklistValues>
                <fullName>Main Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co Borrower</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Call_Plan_Call_Report__c</fullName>
        <label>Call Plan / Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Associated Customers</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Customer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <formula>IF ( Customer__r.RecordType.DeveloperName = &quot;Prospect_SME&quot;,  Customer__r.Name,  Customer__r.Name_Surname_TH__c)</formula>
        <label>Customer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CIS</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Associated Customers</relationshipLabel>
        <relationshipName>Customer_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Secondary_Call_Plan_Call_Report__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Secondary Call Plan / Call Report</label>
        <referenceTo>Call_Report__c</referenceTo>
        <relationshipLabel>Associated Customers (Secondary Call Plan / Call Report)</relationshipLabel>
        <relationshipName>Associated_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Associated Customer</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>REF#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Associated Customers</pluralLabel>
    <recordTypes>
        <fullName>Associated_Contact_Persons</fullName>
        <active>false</active>
        <description>Relationship between Contact Person and Call Report</description>
        <label>Associated Contact Persons</label>
    </recordTypes>
    <recordTypes>
        <fullName>Associated_Customer</fullName>
        <active>false</active>
        <description>Relationship between Customer and Call Report</description>
        <label>Associated Customers</label>
    </recordTypes>
    <recordTypes>
        <fullName>Interested</fullName>
        <active>true</active>
        <description>Associate Customer is interested.</description>
        <label>Interested</label>
    </recordTypes>
    <recordTypes>
        <fullName>Not_Interested</fullName>
        <active>true</active>
        <description>Associate Customer is not interested.</description>
        <label>Not Interested</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Borrow_should_be_selected_when_interest</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Associated_Customer_for_Mobile&quot; &amp;&amp; ispickval(Associated_Customer_Type__c, &quot;Interested&quot;)</errorConditionFormula>
        <errorDisplayField>Borrower_Type__c</errorDisplayField>
        <errorMessage>Please select borrower type</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Not_allow_to_select_same_customer</fullName>
        <active>true</active>
        <errorConditionFormula>Call_Plan_Call_Report__r.CIS_ID__r.Id =  Customer__r.Id</errorConditionFormula>
        <errorDisplayField>Customer__c</errorDisplayField>
        <errorMessage>cannot select the same customer with Call Plan / Call Report</errorMessage>
    </validationRules>
</CustomObject>